--- a/Lox.csproj
+++ b/Lox.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include=".git\config" />
     <None Include=".git\description" />
     <None Include=".git\FETCH_HEAD" />
