Adding support for class methods.

--- a/Lox.csproj
+++ b/Lox.csproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <Compile Include="Lox\HelperFunctions\GetToken.cs" />
     <Compile Include="Lox\LoxClass.cs" />
+    <Compile Include="Lox\LoxInstance.cs" />
     <Compile Include="Lox\Resolver.cs" />
     <Compile Include="Lox\Environment.cs" />
     <Compile Include="Lox\Exceptions\Return.cs" />
