--- a/Lox.csproj
+++ b/Lox.csproj
@@ -5,7 +5,7 @@
     <ProjectGuid>{371E288B-FB53-4113-A2E9-7104AD0B76C3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <NoStandardLibraries>false</NoStandardLibraries>
-    <AssemblyName>ConsoleApplication</AssemblyName>
+    <AssemblyName>Lox</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
