Updating target framework to be .NET 5.0 for cross-platform compatability.

--- a/Lox.csproj
+++ b/Lox.csproj
@@ -1,172 +1,10 @@
-﻿<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{371E288B-FB53-4113-A2E9-7104AD0B76C3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <NoStandardLibraries>false</NoStandardLibraries>
-    <AssemblyName>Lox</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Lox</RootNamespace>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-    <Reference Include="System.Collections.NonGeneric, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\System.Collections.NonGeneric.4.3.0\lib\net46\System.Collections.NonGeneric.dll</HintPath>
-      <Private>True</Private>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include=".editorconfig" />
-    <None Include=".git\config" />
-    <None Include=".git\description" />
-    <None Include=".git\FETCH_HEAD" />
-    <None Include=".git\HEAD" />
-    <None Include=".git\hooks\applypatch-msg.sample" />
-    <None Include=".git\hooks\commit-msg.sample" />
-    <None Include=".git\hooks\post-update.sample" />
-    <None Include=".git\hooks\pre-applypatch.sample" />
-    <None Include=".git\hooks\pre-commit.sample" />
-    <None Include=".git\hooks\pre-push.sample" />
-    <None Include=".git\hooks\pre-rebase.sample" />
-    <None Include=".git\hooks\pre-receive.sample" />
-    <None Include=".git\hooks\prepare-commit-msg.sample" />
-    <None Include=".git\hooks\update.sample" />
-    <None Include=".git\index" />
-    <None Include=".git\info\exclude" />
-    <None Include=".git\logs\HEAD" />
-    <None Include=".git\logs\refs\heads\master" />
-    <None Include=".git\logs\refs\remotes\origin\HEAD" />
-    <None Include=".git\objects\00\d7559f131ad72a1e0364f34843af3256abe9d3" />
-    <None Include=".git\objects\04\530787221a6aee5f4fdfa1b7ab64c6856a241d" />
-    <None Include=".git\objects\09\a77fad3aa8fa0aa1ce4db6cf704f4bd9075a46" />
-    <None Include=".git\objects\10\79576c4c71421a17af5375f962a0da46d68371" />
-    <None Include=".git\objects\11\9a6e661902c8d98212abb1d2402742d7b047f2" />
-    <None Include=".git\objects\19\7b5a650dc4304b95134e6e5b056adbbcdd35fd" />
-    <None Include=".git\objects\1b\38bfd48c8aa785ea4be8ae672399705786f68b" />
-    <None Include=".git\objects\1e\c286f6bfafbda4d9b6c47cf5317e1c670ae499" />
-    <None Include=".git\objects\25\270cb2086c57a1605f5fec0a64381bce0075a1" />
-    <None Include=".git\objects\2a\5e09b1512925c13686554543ae2e5e063cb77e" />
-    <None Include=".git\objects\2e\954fba87abae7fef8b41696019f65c9a1ba984" />
-    <None Include=".git\objects\2e\981284cc5a521ad4ca4ecd3b1b567bb4579345" />
-    <None Include=".git\objects\39\d9f5a8c028f95b1de8fc60cb8aa87833508483" />
-    <None Include=".git\objects\3b\e43636056fda34696187d06555ebd5f0106170" />
-    <None Include=".git\objects\4e\e1013c8d94963a8fe325a894436c5530e486d9" />
-    <None Include=".git\objects\53\94d07c837db7e88e44aad8f6a6dee1c69e2612" />
-    <None Include=".git\objects\57\28dfa477fb6e20462f162f8c982c932035b67a" />
-    <None Include=".git\objects\57\7db984ec8ccee99613e10876654c71a12a802c" />
-    <None Include=".git\objects\6d\5d717ed9b4d959daff3a8dcff4ba6c9fe0b432" />
-    <None Include=".git\objects\74\3df74958a4bd150915ce5bc6b3760eff5aa463" />
-    <None Include=".git\objects\7a\9031132c863fa3c131b87000097bd288dd68a6" />
-    <None Include=".git\objects\7e\2a9c82d8e02879f95ed3e74cd0fee52c35a25f" />
-    <None Include=".git\objects\82\7a285e125982cda396aa26333106de89a8ab8e" />
-    <None Include=".git\objects\8c\32a8202edfbce697a70160ae56fe2fd97fe364" />
-    <None Include=".git\objects\8f\835c96287f5009bb718e1e3444c262ef200717" />
-    <None Include=".git\objects\90\279e8eb43cf460be6aac42bd639afa36719d17" />
-    <None Include=".git\objects\93\b27f30e79e059f55756934b4fce153696c83b5" />
-    <None Include=".git\objects\9a\b59f8698b5ce53fc6b67d903d297a3d49cdf52" />
-    <None Include=".git\objects\9f\8e067c9a6b7942d788ebcc8fde5b4f44ca6c4d" />
-    <None Include=".git\objects\a1\918e06ae917daea21292603b31f00466562e9c" />
-    <None Include=".git\objects\a6\befe1d08c2efe769d8c45294beac1627e4800a" />
-    <None Include=".git\objects\a9\1aa6b8906da5979c6d0349474c32e3cd7210db" />
-    <None Include=".git\objects\bb\2c297d018411ffc0011d89b5b91cad2013d44d" />
-    <None Include=".git\objects\cb\b7b170cb106927ceaad37d1629981c53868325" />
-    <None Include=".git\objects\d1\58e027b86e8b46534443dcac97375ed461b6a9" />
-    <None Include=".git\objects\dd\9ca6e9ebb55a0860f4cd7f7f636ac7a1a3ba38" />
-    <None Include=".git\objects\e5\6f7b5c3f889c70b14a97e1b7e3dc63f9abc5c7" />
-    <None Include=".git\objects\e9\2efd34c91498df8f6eec901fc4283894058632" />
-    <None Include=".git\objects\ec\f2c650e7a8918f2f98227b9057430c85736f92" />
-    <None Include=".git\objects\ef\ff2282723c833f3d3d361131a3eaf042d66888" />
-    <None Include=".git\objects\f7\3c7bfa2c0b3d1a71894b1f87f0293dbba1181a" />
-    <None Include=".git\objects\fb\2747d2a65bda3e9e9f9ed44e5a70a1ca3b29c0" />
-    <None Include=".git\objects\fc\93c2c4797c82385eff84c91ca9a97186c5c674" />
-    <None Include=".git\objects\ff\8a65b4fea8042b634b4e214da6876309654afc" />
-    <None Include=".git\packed-refs" />
-    <None Include=".git\refs\heads\master" />
-    <None Include=".git\refs\remotes\origin\HEAD" />
-    <None Include="app.config" />
-    <None Include="packages.config" />
-    <None Include="README.md" />
-    <None Include="Todo.md" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Lox\HelperFunctions\GetToken.cs" />
-    <Compile Include="Lox\LoxClass.cs" />
-    <Compile Include="Lox\LoxInstance.cs" />
-    <Compile Include="Lox\Resolver.cs" />
-    <Compile Include="Lox\Environment.cs" />
-    <Compile Include="Lox\Exceptions\Return.cs" />
-    <Compile Include="Lox\LoxCallable.cs" />
-    <Compile Include="Lox\LoxFunction.cs" />
-    <Compile Include="Lox\NativeFunctions\Clock.cs" />
-    <Compile Include="Lox\Statement.cs" />
-    <Compile Include="Lox\Interpreter.cs" />
-    <Compile Include="Lox\Parser.cs" />
-    <Compile Include="Lox\AstPrinter.cs" />
-    <Compile Include="Lox\Expr.cs" />
-    <Compile Include="Lox\Lox.cs" />
-    <Compile Include="Lox\Exceptions\RuntimeError.cs" />
-    <Compile Include="Lox\Scanner.cs" />
-    <Compile Include="Lox\Token.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include=".git\objects\info\" />
-    <Folder Include=".git\objects\pack\" />
-    <Folder Include=".git\refs\tags\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
-  <ProjectExtensions>
-    <VisualStudio AllowExistingFolder="true" />
-  </ProjectExtensions>
+
 </Project>
